--- a/src/components/AffiliateCard/affiliate.css
+++ b/src/components/AffiliateCard/affiliate.css
@@ -1,17 +1,14 @@
 .cardContainer {
-  display: inline-block;
-
+  margin-right: 2rem;
 }
 
 .cardContainer img {
-  border: 1px solid red;
-  background-size: contain;
-  border-radius: 50px;
-  border-style: groove;
-  margin: 10px;
+  height: 75px;
+  width: 75px;
+  border-radius: 75px;
+
 }
 
 .cardBody {
-  text-align: center;
   font-weight: medium;
 }
