--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   display:block;
 }
 
+.menu {
+ position:relative;
+}
+
 .logo {
   display:inline;
 }
@@ -22,6 +26,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
 
 /* NAV BAR */
 .App nav {
@@ -39,13 +44,13 @@
   margin: 5px;
   display: inline-block;
   list-style-type: none;
+
 }
-/*  END FRONT DESK */
-/* HOME PAGE */
  
 .affiliateContainer {
   background-color: #494949; 
   text-align:center;
+  color: whitesmoke;
 }
 
 .affiliate {
@@ -53,3 +58,29 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+/*  END FRONT DESK */
+/* HOME PAGE */
+
+/* END HOME PAGE */
+/*  BODY  */
+ a {
+   transition: all .2s ease-in-out;
+  text-decoration: none;
+  color: #60c010;
+  border: 1px solid red;
+}
+
+a:hover {
+  width: (100% + 10px);
+  height: (100% + 10px);
+  transform: scale(1.3);
+  color: whitesmoke;
+}
+/* END BODY */
+/* ABOUT PAGE */
+
+.titleContent img {
+  width: 100%;
+}
+
+/* END ABOUT PAGE */
