--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,6 @@
   display:block;
 }
 
-.menu {
- position:relative;
-}
 
 .logo {
   display:inline;
@@ -24,58 +21,81 @@
 .App-header {
   background-color: #494949;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 
-/* NAV BAR */
-.App nav {
-    border-bottom:1px solid orange;
-  z-index: 1;
-  display: flexbox;
-}
+    /* NAV BAR */
 
-.App nav ul {
-  margin: 0;
-  height: 75px;
+    .App nav {
+      border-bottom:1px solid orange;
+      z-index: 1;
+      display: flexbox;
+      height: 75px;
+    }
 
-}
-.App nav li {
-  margin: 5px;
-  display: inline-block;
-  list-style-type: none;
+    .App .menu nav a {
+      display: block;
+      height: 100%;
+      transition: all .2s ease-in-out;
+      text-decoration: none;
+       color: #60c010;
+       justify-content: space-between;
+    }
 
-}
- 
-.affiliateContainer {
-  background-color: #494949; 
-  text-align:center;
-  color: whitesmoke;
-}
+    .menu nav a:hover {
+     transform: scale(1.1);
+     color: whitesmoke;
+     background-color: #60c010;
+     width: 100%+10px;
+    }
 
-.affiliate {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
+    .App nav ul {
+      margin: 0;
+      height: 100%;
+      justify-content:center;
+    }
+    .App nav li {
+      display: inline-block;
+      list-style-type: none;
+      height: 100%;
+      align-items: center;
+    }
+    /* END NAV BAR */
+    /* AFFILIATIONS */
+    .affiliateContainer {
+      background-color: #494949; 
+      text-align:center;
+      color: whitesmoke;
+      height: 100%;
+    }
+    .affilateContainer a {
+       transition: all .2s ease-in-out;
+       text-decoration: none;
+       color: #60c010;
+    }
+    .affiliateContainer a:hover {
+       transform: scale(1.3);
+       color: whitesmoke;
+    }
+    .affiliate {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    /* END AFFILIATIONS */
 /*  END FRONT DESK */
 /* HOME PAGE */
 
 /* END HOME PAGE */
 /*  BODY  */
- a {
-   transition: all .2s ease-in-out;
-  text-decoration: none;
-  color: #60c010;
-  border: 1px solid red;
-}
-
-a:hover {
-  width: (100% + 10px);
-  height: (100% + 10px);
-  transform: scale(1.3);
-  color: whitesmoke;
-}
+    
+html {
+      background-image: url('./images/Artboard\ 3\ copy\ 2@4x.png');
+      background-repeat:no-repeat;
+      background-position: center center;
+      background-size:cover;
+      width: 100%;
+    }
 /* END BODY */
 /* ABOUT PAGE */
 
@@ -84,3 +104,10 @@ a:hover {
 }
 
 /* END ABOUT PAGE */
+/*  GALLERY PAGE */
+
+.tournamentRow {
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
