--- a/src/components/AffiliateCard/affiliate.css
+++ b/src/components/AffiliateCard/affiliate.css
@@ -1,14 +1,14 @@
-.cardContainer {
+.cardContainerAff {
   margin-right: 2rem;
 }
 
-.cardContainer img {
+.cardContainerAff img {
   height: 75px;
   width: 75px;
   border-radius: 75px;
 
 }
 
-.cardBody {
+.cardBodyAff {
   font-weight: medium;
 }
