--- a/src/App.css
+++ b/src/App.css
@@ -104,10 +104,17 @@ html {
 }
 
 /* END ABOUT PAGE */
-/*  GALLERY PAGE */
+/*  GALLERY PAGE / STAFF PAGE*/
 
-.tournamentRow {
+.tournamentRow, .staffRow {
   display:flex;
   flex-wrap: wrap;
   flex-direction: row;
+  justify-content: center;
 }
+
+h1 .title {
+  margin-left: auto;
+}
+
+/* END GALLERY PAGE / STAFF PAGE */
