--- a/src/components/GalleryCard/gallery.css
+++ b/src/components/GalleryCard/gallery.css
@@ -1,13 +1,15 @@
 .cardContainerGal {
   width: 15rem;
-  height: 25rem;
   text-align: center;
   margin: 10px;
   background-color: whitesmoke;
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
-  content: "";
-  border-radius:10px;
+  align-items: center;
+  transition: all .2s ease-in-out;
 }
+    .cardContainerGal:hover {
+       transform: scale(1.2);
+    }
 
 .cardBodyGal {
   font-weight: medium;
@@ -17,15 +19,21 @@
 .cardBodyGal h3 {
   background-color: darkgray;
 }
-
-.cardBodyGal button {
-  display: block;
+.sameLine {
+  align-items: center;
 }
-.cardBodyGal img {
-display: inline-block;
+.linkButton {
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
 }
 
  .discord {
   height: 50px;
   width: 50px;
+}
+.tourneyimg {
+  background-size: cover;
+  height: 15rem;
+  width: 15rem;
 }
