move some files around removed unnecessary styling

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@
 /*  BODY  */
     
 html {
-      background-image: url('./images/Artboard\ 3\ copy\ 2@4x.png');
+      background-image: url('./images/companyImages/Artboard\ 3\ copy\ 2@4x.png');
       background-repeat:no-repeat;
       background-position: center center;
       background-size:cover;
