--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,14 @@
 
 .document {
   min-height: calc(100vh - 150px);
+  width: 100%;
 }
 
 .logo img {
   width: 50px;
   height: 50px;
   float: left;
+  display:flex;
 }
 
 
@@ -20,12 +22,12 @@
     .menu nav {
       margin: 0;
       display:flex;
-      align-items: center;
-      justify-content: space-between;
-      height: 100%;
       background-color: #494949;
-      font-size: calc(10px + 2vmin);
-      
+      font-size: large;
+      box-shadow:0 10px 20px black;
+      height: 3em;
+      margin-bottom: 1em;
+      overflow: hidden;
     }
 
     .menu nav a {
@@ -34,6 +36,7 @@
       text-decoration: none;
       color: #60c010;
       display: block;
+      float: left;
     }
 
     .menu nav a:hover {
@@ -42,11 +45,16 @@
      background-color: #60c010;
     }
 
+    .active {
+      border-bottom: 2px solid white;
+    }
+
     /* END NAV BAR */
     /* AFFILIATIONS */
     .affiliateContainer {
       background-color: #494949; 
       text-align:center;
+      width: 100%;
       color: whitesmoke;
       height: 150px;
       box-shadow:0 0 30px 5px black;
@@ -61,13 +69,19 @@
        color: whitesmoke;
     }
     .affiliate {
-      display: flex;
+      display: inline-flex;
     }
     /* END AFFILIATIONS */
 /*  END FRONT DESK */
 /* HOME PAGE */
 .App-logo {
  width: 100%;
+ height: 25em;
+ margin-top: auto;
+}
+
+.imageContainer {
+  width: 100%;
 }
 /* END HOME PAGE */
 /*  BODY  */
